<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_padding"
    tools:context=".fragments.SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_in_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rectangular_field"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_left_padding"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="@dimen/image_view_size"
            android:layout_height="@dimen/image_view_size"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/image_view_margin_left"
            android:background="@drawable/email" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rectangular_field"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_left_padding"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="@dimen/image_view_size"
            android:layout_height="@dimen/image_view_size"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/image_view_margin_left"
            android:background="@drawable/password" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rectangular_field"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_left_padding"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="@dimen/image_view_size"
            android:layout_height="@dimen/image_view_size"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/image_view_margin_left"
            android:background="@drawable/password" />

    </RelativeLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:background="@color/green"
        android:text="@string/sign_up_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_question"
            android:textColor="@color/white"
            android:textSize="@dimen/register_text_size" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_label_margin_left"
            android:text="@string/login_label"
            android:textColor="@color/white"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>