<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_padding"
    tools:context=".fragments.ResetPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_label"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_in_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rectangular_field"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_left_padding"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="@dimen/image_view_size"
            android:layout_height="@dimen/image_view_size"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/image_view_margin_left"
            android:background="@drawable/email" />

    </RelativeLayout>


    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:background="@color/green"
        android:text="@string/reset_password_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_text_size" />


    <TextView
        android:id="@+id/reset_back_to_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reset_back_to_login_tv_margin_top"
        android:text="@string/back_to_login_fragment_label"
        android:textColor="@color/white"
        android:textSize="@dimen/register_text_size"
        android:textStyle="bold" />


</LinearLayout>