<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/topic_item_margin_top"
    android:background="@android:color/transparent"
    android:clickable="true">


    <LinearLayout
        android:id="@+id/topic_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/topic_item_padding_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/topic_item_label_margin_left"
                android:gravity="center_horizontal"
                android:text="@string/topic_title_label" />

            <TextView
                android:id="@+id/topic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/topic_item_margin_left"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/topic_author_label_margin_left"
                android:gravity="center_horizontal"
                android:text="@string/topic_author_label" />

            <TextView
                android:id="@+id/topic_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/topic_author_margin_left"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/update_topic_button"
                android:layout_width="@dimen/topic_update_button_width"
                android:layout_height="@dimen/topic_update_button_height"

                android:layout_marginRight="@dimen/topic_update_button_margin_right"
                android:text="@string/update_topic_button_label"

                android:textSize="@dimen/topic_update_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/topic_item_label_margin_left"
                android:text="@string/topic_description_label" />

            <TextView
                android:id="@+id/topic_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/topic_item_margin_left"
                android:gravity="center" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>