<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/comment_item_margin_top"
    app:layout_constrainedWidth="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/medium_blue"
        android:minWidth="@dimen/comment_item_min_width"
        android:minHeight="@dimen/comment_min_height"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/comment_solution_image"
                android:layout_width="@dimen/solution_comment_image_width"
                android:layout_height="@dimen/solution_comment_image_height"
                android:src="@drawable/solution" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/topic_item_label_margin_left"
                android:gravity="center_horizontal"
                android:text="@string/comment_author_label" />

            <TextView
                android:id="@+id/comment_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/comment_item_margin_left"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/mark_solution_button"
                android:layout_width="@dimen/comment_button_width"
                android:layout_height="@dimen/comment_button_height"
                android:layout_marginTop="@dimen/comment_mark_solution_button_margin_top"
                android:layout_marginRight="@dimen/comment_button_margin_right"
                android:background="@drawable/button_shape"
                android:text="@string/mark_solution_button_label"
                android:textSize="@dimen/comment_button_text_size" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/item_comment_content_margin_left"
            android:layout_marginTop="@dimen/comment_bottom_layout_margin_top"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/topic_item_label_margin_left"
                android:gravity="center_horizontal"
                android:text="@string/comment_content_label" />

            <TextView
                android:id="@+id/comment_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/comment_item_margin_left"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/delete_comment_button"
                android:layout_width="@dimen/comment_button_width"
                android:layout_height="@dimen/comment_button_height"
                android:layout_marginRight="@dimen/comment_button_margin_right"
                android:layout_marginBottom="@dimen/comment_delete_button_margin_bottom"
                android:background="@drawable/button_shape"
                android:text="@string/comment_item_delete_button_label"
                android:textSize="@dimen/comment_button_text_size" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>